Continue phase and update task.md